7/14/14 #29 factor out duplicate code in GameFeedbackDialog
# 1.0.0-dev.9 7/15/14
7/14/14 #77 add debug code for shown bounds of the 'balance scales' representation
7/14/14 fix in GameModel.startGame: reset currentEquationIndex before using it to choose currentEquation
7/14/14 #29 move Next, Try Again, and Show Answer buttons into game feedback dialog (when appropriate), remove from play area
7/14/14 #76 replace complicated game popup types (5 files) with a single type, GameFeedbackDialog
7/14/14 #69 use visible instead of add/removeChild to transition between level-selection and game-play interfaces
7/14/14 #69 update bar charts and balance scales only when they are visible
7/14/14 remove erroneous font option from Image constructors in ToolsComboBox
7/14/14 misc doc and formatting
7/14/14 remove unnecessary equation field in nodes that observe equationProperty, get value from equationProperty
7/14/14 GameModel: rename some properties
7/14/14 Game: move challengesPerGame property from view to model
7/14/14 remove coupling between EquationChoiceNode and IntroductionModel
7/14/14 rename IntroductionModel.currentEquation to equation
7/14/14 remove coupling between BoxesNode and models
7/14/14 give GameModel.currentEquation a non-null initial value, to prevent the recurring problems that this had been causing
7/14/14 Game: convert Properties that are not observed to simple fields (currentPoints, attempts, balancedRepresentation, isNewBestTime)
7/14/14 fix in GameView, where current equation is undefined until a level is selected (on startup and on reset)
7/14/14 Game: move timerEnabled property to view
7/14/14 Intro: move balancedRepresentation property from model to view
7/14/14 move view-specific properties out of models (soundEnabled, reactantsBoxExpanded, productsBoxExpanded)
7/14/14 change Equation.balancedAndSimplified from a Property to a field, nothing observes it